--- a/.github/workflows/dotnet-ci-cd.yml
+++ b/.github/workflows/dotnet-ci-cd.yml
@@ -38,13 +38,22 @@ jobs:
   deploy_dev:
     runs-on: ubuntu-latest
     needs: [build]
+    environment: 
+      name: dev
+      url: https://some.url
     steps:
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v2.0.8
+        with:
+          name: webapp
+          path: webapp
       - name: Run a one-line script
         run: echo Hello, world!
 
   deploy_test:
     runs-on: ubuntu-latest
     needs: [deploy_dev]
+    environment: test
     steps:
       - name: Run a one-line script
         run: echo Hello, world!
@@ -52,6 +61,7 @@ jobs:
   deploy_prod:
     runs-on: ubuntu-latest
     needs: [deploy_test]
+    environment: prod
     steps:
       - name: Run a one-line script
         run: echo Hello, world!
